--- a/WebContent/pages/object_function.html
+++ b/WebContent/pages/object_function.html
@@ -15,28 +15,26 @@
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+
   <h1>创建/修改</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 create [or replace]
   function function_name(parameters)
   return type
   [deterministic] as
   begin
     …
-  end function_name;
-    </code>
-  </pre>
+  end function_name;</code></pre>
 
   <h1>查询</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 select * from user_objects;
 select * from all_objects;
 select * from dba_objects;
 
-select * from user_source;
-    </code>
-  </pre>
+select * from user_source;</code></pre>
+
 </body>
 </html>
