--- a/WebContent/pages/object_type.html
+++ b/WebContent/pages/object_type.html
@@ -16,16 +16,13 @@
 </head>
 <body>
   <h1>创建</h1>
-  <pre class="code">
-    <code>
+  <pre class="code"><code>
 create or replace type &lt;type_name> as object
   (&lt;column_name>,
     …
   )
     
-create or replace type &lt;type_name> as table of &lt;type>;
-    </code>
-  </pre>
+create or replace type &lt;type_name> as table of &lt;type>;</code></pre>
     
 </body>
 </html>
