--- a/WebContent/pages/subject_program.html
+++ b/WebContent/pages/subject_program.html
@@ -27,13 +27,10 @@
     <li>如果正在引用的变量的数据类型发生改变，用户 %type 和 %rowtype 变量也会在运行时改变，而不必重新声明变量</li>
   </ul>
   <p class="next">定义记录类型</p>
-  <pre class="code">
-    <code>
+  <pre class="code"><code>
 type record_name is record (
   field_declaration, 
-  ... );
-    </code>
-  </pre>
+  ... );</code></pre>
   
   <h2>语句块</h2>
   <p>条件是可以取值为 true、false 或 null 的表达式。如果条件取值为 null，将产生异常。</p>
