--- a/WebContent/pages/object_all.html
+++ b/WebContent/pages/object_all.html
@@ -15,31 +15,28 @@
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+
   <h1>参数信息</h1>
-  <pre class="code">
-    <code>
+  <pre class="code"><code>
 select * from v$database;
 select * from v$instance;
-select * from v$nls_parameters;
-    </code>
-  </pre>
+select * from v$nls_parameters;</code></pre>
 
   <h1>普通查询</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 select * from user_objects;
 select * from all_objects;
 select * from dba_objects;
   
 select * from user_recyclebin;
 select * from recyclebin;
-select * from dba_recyclebin;
-    </code>
-  </pre>
+select * from dba_recyclebin;</code></pre>
 
   <h1>清除</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
+purge table &lt;table_name>;
 purge index &lt;index_name>;
 --一般用户清除自己的回收站
 purge recyclebin;
@@ -48,20 +45,14 @@ purge dba_recyclebin;
 --清除指定表空间回收站
 purge tablespace &lt;ts_name>;
 --清除指定表空间中指定用户的回收站
-purge tablespace &lt;ts_name> user &lt;user_name>;
-    </code>
-  </pre>
+purge tablespace &lt;ts_name> user &lt;user_name>;</code></pre>
 
   <h1>关系</h1>
-  <pre class="code">
-    <code>
-select * from sys.user_dependencies
-    </code>
-  </pre>
+  <pre class="code"><code>
+select * from sys.user_dependencies;</code></pre>
 
   <h1>事务</h1>
-  <pre class="code">
-    <code>
+  <pre class="code"><code>
 set transaction read only | read write; 
 set transaction isolation level serializable | read commited; 
 
@@ -71,8 +62,7 @@ pragma autonomous_transaction;
 create or replace procedure sub_block is  
 pragma autonomous_transaction;  
 begin
-...
-    </code>
-  </pre>
+...</code></pre>
+
 </body>
 </html>
