--- a/WebContent/pages/object_table.html
+++ b/WebContent/pages/object_table.html
@@ -15,11 +15,15 @@
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+
   <h1>创建</h1>
+  <pre class="code"><code>
+create table &lt;table_name> (&lt;columns_defination>)
+  tablespace &lt;tablespace_name>;</code></pre>
 
   <h1>修改</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 alter table &lt;table_name> allocate extent(size &lt;file_size> datafile &lt;datafile_path>);
 
 alter table &lt;table_name> move tablespace &lt;tablespace_name>;
@@ -28,13 +32,11 @@ alter table &lt;table_name> drop column &lt;column_name> cascade constraints [ch
 
 alter table &lt;table_name> set unused column &lt;column_name> cascade constraints;
 
-alter table &lt;table_name> drop unused columns [checkpoint &lt;checkpoint_name>];
-    </code>
-  </pre>
+alter table &lt;table_name> drop unused columns [checkpoint &lt;checkpoint_name>];</code></pre>
 
   <h1>查询</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 select * from all_tab_comments;
 select * from user_tab_comments;
 
@@ -48,30 +50,43 @@ select * from dba_tables;
 select * from all_tables;
 select * from user_all_tables;
 
-select * from user_tables;
-    </code>
-  </pre>
+select * from user_tables;</code></pre>
 
   <h1>删除</h1>
-  <pre class="code">
-    <code>
-drop table &lt;table_name> [purge];
-    </code>
-  </pre>
+  <pre class="code"><code>
+drop table &lt;table_name> [purge];</code></pre>
+  <div class="ext">
+    注：删除掉的表、索引等对象默认放入回收站中，除非删除时指定了 purge 关键字。回收站中的对象可以通过 flashback 快速恢复。
+  </div>
   
   <h1>恢复</h1>
-  <pre class="code">
-    <code>
-flashback table &lt;table_name> to [before drop | scn &lt;scn>] [rename to &lt;new_table_name>];
-    </code>
-  </pre>
+  <pre class="code"><code class="sql">
+flashback table &lt;table_name> to [before drop | scn &lt;scn>] [rename to &lt;new_table_name>];</code></pre>
 
   <h1>清除</h1>
-  <pre class="code">
-    <code>
-purge table &lt;table_name>;
-    </code>
-  </pre>
+  <pre class="code"><code>
+purge table &lt;table_name>;</code></pre>
+
+  <h1>技巧</h1>
+  
+  <h2>批量生成转移语句</h2>
+  <pre class="code"><code>
+-- 批量生成语句，将某些表转移到指定的表空间中
+select 'alter table ' || t.table_name || ' move tablespace &lt;tablespace_name>;' stm
+  from user_tables t
+ where t.tablespace_name = &lt;from_tablespace_name>
+ order by t.table_name;
+
+select 'alter table ' || t.segment_name || ' move tablespace &lt;tablespace_name>;' stm, sum(t.BYTES/1024/1024) "size(M)"
+  from dba_segments t
+ where t.tablespace_name = &lt;from_tablespace_name>
+   and t.owner = &lt;user_name>
+   and t.segment_type = 'TABLE'
+ group by t.segment_name
+ order by segment_name; </code></pre>
+  <div class="ext">
+    推荐从 user_tables 生成，因为并非所有表都会在 dba_segments 中，dba_segments 优点在于可以统计表占用空间的大小（可用以评估移动的耗时）。
+  </div>
   
 </body>
 </html>
