--- a/WebContent/pages/object_tablespace.html
+++ b/WebContent/pages/object_tablespace.html
@@ -15,9 +15,10 @@
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
+
   <h1>创建</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 --创建表空间
 create tablespace &lt;tablespace_name>
   datafile &lt;datafile_path>
@@ -40,20 +41,15 @@ create undo tablespace &lt;tablespace_name>
   size &lt;file_size>
   autoextend on
   next &lt;next_size> maxsize [&lt;max_size> | unlimited]
-  extent management local;
-    </code>
-  </pre>
+  extent management local;</code></pre>
 
   <h1>删除</h1>
-  <pre class="code">
-    <code>
-drop tablespace &lt;tablespace_name> including contents and datafiles;
-    </code>
-  </pre>
+  <pre class="code"><code>
+drop tablespace &lt;tablespace_name> including contents and datafiles;</code></pre>
 
   <h1>修改</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 --修改默认表空间
 alter [user &lt;user_name>|database] default tablespace &lt;tablespace_name>;
 alter [user &lt;user_name>|database] default temporary tablespace &lt;tablespace_name>;
@@ -74,13 +70,11 @@ alter tablespace &lt;tablespace_name> add|drop datafile &lt;file_path> size &lt;
 
 alter tablespace &lt;tablespace_name> [online | offline];
 
-alter tablespace &lt;tablespace_name> [read only | write];  
-    </code>
-  </pre>
+alter tablespace &lt;tablespace_name> [read only | write]; </code></pre>
 
   <h1>查询</h1>
-  <pre class="code">
-    <code>
+  
+  <pre class="code"><code>
 --查询默认表空间
 select username, default_tablespace from dba_users;
 show parameter undo;
@@ -93,8 +87,54 @@ select t.owner, t.segment_name, sum(bytes) / 1024 / 1024
   from dba_segments t
  where t.tablespace_name = &lt;tablespace_name>
  group by t.owner, t.segment_name
- order by sum(bytes) desc;
-     </code>
-  </pre>
+ order by sum(bytes) desc;</code></pre>
+ 
+  <h1>相关</h1>
+   
+  <h2>移动表</h2>
+  <pre class="code"><code>
+alter table &lt;table_name> move tablespace &lt;tablespace_name>;</code></pre>
+   
+  <h2>移动索引</h2>
+  <pre class="code"><code>
+--移动普通索引
+alter index &lt;index_name> rebuild tablespace &lt;tablespace_name>; </code></pre>
+ 
+  <h1>技巧</h1>
+  
+  <h2>批量生成转移语句</h2>
+  <pre class="code"><code>
+--批量生成表转移语句，将某些表转移到指定的表空间中
+select 'alter table ' || t.table_name || ' move tablespace &lt;tablespace_name>;' stm
+  from user_tables t
+ where t.tablespace_name = &lt;from_tablespace_name>
+ order by t.table_name;
+
+select 'alter table ' || t.segment_name || ' move tablespace &lt;tablespace_name>;' stm, sum(t.BYTES/1024/1024) "size(M)"
+  from dba_segments t
+ where t.tablespace_name = &lt;from_tablespace_name>
+   and t.owner = &lt;user_name>
+   and t.segment_type = 'TABLE'
+ group by t.segment_name
+ order by segment_name; 
+ 
+--批量生成索引转移语句，将某些索引转移到指定的表空间中
+select 'alter index ' || t.index_name || ' rebuild tablespace &lt;tablespace_name>;' stm
+  from user_indexes t
+ where t.tablespace_name = &lt;user_name>
+ order by t.index_name;
+
+select 'alter index ' || t.segment_name || ' rebuild tablespace &lt;tablespace_name>;' stm, sum(t.BYTES/1024/1024) "size(M)"
+  from dba_segments t
+ where t.tablespace_name = &lt;from_tablespace_name>
+   and t.owner = &lt;user_name>
+   and t.segment_type = 'INDEX'
+ group by t.segment_name
+ order by segment_name;
+</code></pre>
+  <div class="ext">
+    推荐从 user_tables、user_indexes 生成，因为并非所有表、索引都会在 dba_segments 中，dba_segments 优点在于可以统计占用空间的大小（可用以评估移动的耗时）。
+  </div>
+ 
 </body>
 </html>
