--- a/WebContent/pages/subject_lock.html
+++ b/WebContent/pages/subject_lock.html
@@ -7,6 +7,8 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -292,29 +294,36 @@
   
   <h2>相关查询</h2>
   <p>1.查询数据库中的锁</p>
-  <pre class="code">select * from v$lock;
-select * from v$lock where block=1;</pre>
+  <pre class="code"><code>
+select * from v$lock;
+select * from v$lock where block=1;</code></pre>
   <p>2.查询被锁的对象</p>
-  <pre class="code">select * from v$locked_object;</pre>
+  <pre class="code"><code>
+select * from v$locked_object;</code></pre>
   <p>3.查询阻塞</p>
-  <pre class="code"><span class="comment">--查被阻塞的会话</span>
+  <pre class="code"><code>
+--查被阻塞的会话
 select * from v$lock where lmode=0 and type in ('TM','TX');
-<span class="comment">--查阻塞别的会话锁</span>
-select * from v$lock where lmode>0 and type in ('TM','TX');</pre>
+--查阻塞别的会话锁
+select * from v$lock where lmode>0 and type in ('TM','TX');</code></pre>
   <p>4.查询数据库正在等待锁的进程</p>
-  <pre class="code">select * from v$session where lockwait is not null;</pre>
+  <pre class="code"><code>
+select * from v$session where lockwait is not null;</code></pre>
   <p>5.查询会话之间锁等待的关系</p>
-  <pre class="code">select a.sid holdsid,b.sid waitsid,a.type,a.id1,a.id2,a.ctime from v$lock a,v$lock b
-  where a.id1=b.id1 and a.id2=b.id2 and a.block=1 and b.block=0;</pre>
+  <pre class="code"><code>
+select a.sid holdsid,b.sid waitsid,a.type,a.id1,a.id2,a.ctime from v$lock a,v$lock b
+  where a.id1=b.id1 and a.id2=b.id2 and a.block=1 and b.block=0;</code></pre>
   <p>6.查询锁等待事件</p>
-  <pre class="code">select * from v$session_wait where event='enqueue';</pre>
+  <pre class="code"><code>
+select * from v$session_wait where event='enqueue';</code></pre>
 
   <h2>强制解除锁定</h2>
-  <pre class="code"><span class="comment">--首先得到被锁对象的session_id</span>
+  <pre class="code"><code>
+--首先得到被锁对象的session_id
 select session_id from v$locked_object; 
-<span class="comment">--通过上面得到的session_id去取得v$session的sid和serial#，然后对该进程进行终止。</span>
-SELECT sid, serial#, username, osuser FROM v$session where sid = session_id; 
-ALTER SYSTEM KILL SESSION 'sid,serial';</pre>
+--通过上面得到的session_id去取得v$session的sid和serial#，然后对该进程进行终止
+select sid, serial#, username, osuser from v$session where sid = session_id; 
+alter system kill session 'sid,serial';</code></pre>
 
 </body>
 </html>
