--- a/WebContent/pages/subject_query.html
+++ b/WebContent/pages/subject_query.html
@@ -30,25 +30,25 @@
         <ol>
           <li>
             简单 case 表达式
-            <pre class="code">
+            <pre class="code"><code>
 case search_expression
   when expression_1 then display_result1
   when expression_2 then display_result2
   ...
   when expression_n then display_result_n
   else default_display_result
-end</pre>
+end</code></pre>
           </li>
           <li>
             搜索 case 表达式
-            <pre class="code">
+            <pre class="code"><code>
 case
   when expression_1 then display_result_1
   when expression_2 then display_result_2
   ...
   when expression_n then display_result_n
   else default_display_result
-end</pre>
+end</code></pre>
           </li>
         </ol>
       </li>
@@ -57,14 +57,11 @@ end</pre>
   
     <h2>层次查询</h2>
   <h3>语法</h3>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select level, &lt;column_list>, &lt;expression_list> from &lt;table_name>
   [where &lt;condition>]
   start with &lt;start_condition>
-  connect by prior &lt;prior_condition>;
-    </code>
-  </pre>
+  connect by prior &lt;prior_condition>;</code></pre>
   <dl>
     <dt>level</dt>
     <dd>伪列，树层次</dd>
@@ -80,13 +77,10 @@ select level, &lt;column_list>, &lt;expression_list> from &lt;table_name>
     <dd>父子节点关系</dd>
   </dl>
   <p>例如：</p>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select part_id, parent_id, part_name, mp_cost from bicycle
   start with part_id = 1
-  connect by prior part_id = parent_id;
-    </code>
-  </pre>
+  connect by prior part_id = parent_id;</code></pre>
   
   <h3>排序及过滤</h3>
   <p>在层次查询中，自底向上遍历只需要交换 connct by 中父子节点的位置。</p>
@@ -155,12 +149,9 @@ select part_id, parent_id, part_name, mp_cost from bicycle
     <li>查询必须是等值连接</li>
     <li>等值连接中的列必须具有相同的名称和数据类型</li>
   </ul>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select emp.empno, emp.ename, emp.sal, dept.loc
-  from emp join dept <span class="notice">using(deptno)</span>;
-    </code>
-  </pre>
+  from emp join dept <span class="notice">using(deptno)</span>;</code></pre>
   
   <h2>外连接</h2>
   <dl>
@@ -218,32 +209,23 @@ select emp.empno, emp.ename, emp.sal, dept.loc
   
   <h2>多列子查询</h2>
   <p>多列子查询则是指返回多列数据的子查询语句。</p>
-  <pre class="code">
-    <code class="sql">
-select * from emp where (deptno,job)=(select deptno,job from emp where ename = 'Smith');
-    </code>
-  </pre>
+  <pre class="code"><code class="sql">
+select * from emp where (deptno,job)=(select deptno,job from emp where ename = 'Smith');</code></pre>
   
   <h3>语法</h3>
   <p>多列子查询语法</p>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select &lt;column_list> from &lt;table>
   where &lt;condition_column_list> in (
     select &lt;sub_column_list> from &lt;sub_table>
       where &lt;sub_condition>
-  );  
-    </code>
-  </pre>
+  );  </code></pre>
   <p>多列子查询更新语法</p>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 update table set (&lt;column_list>) = (
   select &lt;column_list> from table
     where &lt;condition>
-);  
-    </code>
-  </pre>
+);  </code></pre>
   
   <h3>单行比较 vs. 多行比较</h3>
   <p>当多列子查询返回单行数据时，在where子句中可以使用单行比较符。（=，!=，...）</p>
@@ -255,16 +237,13 @@ update table set (&lt;column_list>) = (
     <dt>非成对比较</dt>
     <dd>即使不是成对相等，也可以称为满足匹配的条件。</dd>
   </dl>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 --成对比较示例
 SELECT ename, sal, comm, deptno FROM emp
   WHERE (sal, nvl(comm, -1)) IN (SELECT sal, nvl(comm, -1) FROM emp WHERE deptno=30);
 --非成对比较示例
 SELECT ename, sal, comm, deptno FROM emp
-  WHERE sal IN (SELECT sal FROM emp WHERE deptno=30) AND nvl(comm, -1) IN (SELECT nvl(comm, -1) FROM emp WHERE deptno=30);
-    </code>
-  </pre>  
+  WHERE sal IN (SELECT sal FROM emp WHERE deptno=30) AND nvl(comm, -1) IN (SELECT nvl(comm, -1) FROM emp WHERE deptno=30);</code></pre>  
   
   <h2>注意</h2>
   <p>内查询的结果是空值，外查询的条件始终不会成立。</p>
@@ -280,11 +259,8 @@ SELECT ename, sal, comm, deptno FROM emp
   
   <h2>表达式排序</h2>
   <p>除了直接指定列名排序外，还可依据表达式对数据排序。</p>
-  <pre class="code">
-    <code class="code">
-select * from emp order by sal*12 desc;
-    </code>
-  </pre>
+  <pre class="code"><code class="code">
+select * from emp order by sal*12 desc;</code></pre>
 
   <h2>别名排序</h2>
   <p>排序操作可使用别名。若在 select 语句中定义了列的别名，那么该列名可以使用在 order by 子句中，对于包含了表达式的排序来说，
@@ -292,15 +268,12 @@ select * from emp order by sal*12 desc;
   
   <h2>数字序号排序</h2>
   <p>排序操作可使用数字序号代替列名称。数字序号代表列名称由 select 子句后面的列名顺序决定。</p>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select ename, job, hiredate, sal from emp
   order by hiredate, sal desc;
 等价于：
 select ename, job, hiredate, sal from emp
-  order by 3 sal desc;
-    </code>
-  </pre>
+  order by 3 sal desc;</code></pre>
   
   <h1>集合运算</h1>
   <dl>
@@ -317,12 +290,9 @@ select ename, job, hiredate, sal from emp
   <h1>附录</h1>
   <h2>转义</h2>
   <p>escape 子句可把“_”和“%”从特殊标志返回到普通字符。escape 子句用来指定一个退出符号，该退出符号后面的字符被作为普通字符对待。</p>
-  <pre class="code">
-    <code class="sql">
+  <pre class="code"><code class="sql">
 select ... from ...
-  where ... like 'A\%' escape '\';
-    </code>
-  </pre>
+  where ... like 'A\%' escape '\';</code></pre>
   
   <h2>其它</h2>
   <p>between...and... 包含边界值。</p>
