--- a/WebContent/pages/数据库对象_数据库链接.html
+++ b/WebContent/pages/数据库对象_数据库链接.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>DBLink</title>
+<title>数据库链接（database link）</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
@@ -18,15 +18,15 @@
   <h1>创建</h1>
   
   <pre class="code"><code>
-create database link &lt;link_name>
-  connect to &lt;user_name>
-  using '(description = (address = (protocol = tcp)(host = &lt;host_ip>)(port = &lt;port>))
-  (connect_data = (server = dedicated) (service_name = &lt;service_name>)))';</code></pre>
+create database link &lt;LinkName>
+  connect to &lt;UerName>
+  using '(description = (address = (protocol = tcp)(host = &lt;HostIp>)(port = &lt;Port>))
+  (connect_data = (server = dedicated) (service_name = &lt;ServiceName>)))';</code></pre>
   
   <h1>删除</h1>
   
   <pre class="code"><code>
-drop database link &lt;link_name>;</code></pre>
+drop database link &lt;LinkName>;</code></pre>
   
 </body>
 </html>
