--- a/WebContent/pages/数据库对象_用户.html
+++ b/WebContent/pages/数据库对象_用户.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>用户（User）</title>
+<title>用户（user）</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
@@ -17,44 +17,38 @@
 <body>
   <h1>创建</h1>
   <pre class="code"><code>
-CREATE USER username
-  IDENTIFIED BY [password|EXTERNALLY|]
-  [DEFAULT TABLESPACE  UserTableSpaceName]
-  [TEMPORARY TABLESPACE TempTableSpaceName]
-  [PROFILE FILENAME]
-  [QUOTA n M|K|UNLIMITED on UserTableSpaceName]
-  [ACCOUNT LOCK |UNLOCK];</code></pre>
+create user &lt;Username>
+  identified by &lt;Password>
+  [default tablespace  &lt;TableSpaceName>]
+  [temporary tablespace &lt;TempTableSpaceName>]
+  [quota &lt;Size|unlimited> on &lt;TableSpaceName>]
+  [account &lt;lock|unlock>];</code></pre>
   
   <h1>修改</h1>
   <pre class="code"><code>
-Alter USER username
-  IDENTIFIED BY [password|EXTERNALLY|]
-  [DEFAULT TABLESPACE  UserTableSpaceName]
-  [TEMPORARY TABLESPACE TempTableSpaceName]
-  [PROFILE FILENAME]
-  [QUOTA n M|K|UNLIMITED on UserTableSpaceName]
-  DAFAULT ROLE ROLE_LIST|ALL|EXCEPT ROLE_LIST|NONE
-  [ACCOUNT LOCK |UNLOCK];</code></pre>
+alter user &lt;Username>
+  identified by &lt;Password>
+  [default tablespace  &lt;TableSpaceName>]
+  [temporary tablespace &lt;TempTableSpaceName>]
+  [quota &lt;Size|unlimited> on &lt;TableSpaceName>]
+  [account &lt;lock|unlock>];</code></pre>
   
   <h1>删除</h1>
   <pre class="code"><code>
-drop user &lt;user_name> cascade;   </code></pre>
+drop user &lt;Username> cascade;   </code></pre>
   <p>cascade 关键字不仅可以删除所有的用户对象，而且还可以删除其他用户模式中对已删除对象表进行引用的约束，使其他用户所拥有的引用了已删除对象的对象无效。</p>
 
-  <h1>查询</h1>
-  <pre class="code"><code>
-select * from dba_users;
-select * from all_users;
-select * from user_users; </code></pre>
+  <h1>数据字典</h1>
+  <p>&lt;user|all|dba>_users</p>
 
   <h1>权限</h1>
   <pre class="code"><code>
---赋予对象权限
-grant object_privilege on object_name to username [with grant option];  
---删除对象权限
-revoke object_privilege on object_name from username;
---赋予角色
-grant role_name to user_name [with admin option];</code></pre>
+-- 赋予对象权限
+grant &lt;ObjectPrivilege> on &lt;ObjectName> to &lt;Username> [with grant option];  
+-- 删除对象权限
+revoke &lt;ObjectPrivilege> on &lt;ObjectName> from &lt;Username>;
+-- 赋予角色
+grant &lt;RoleName> to &lt;Username> [with admin option];</code></pre>
 
 </body>
 </html>
