--- a/WebContent/pages/数据库对象_索引.html
+++ b/WebContent/pages/数据库对象_索引.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>Index</title>
+<title>索引（index）</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
@@ -18,40 +18,33 @@
   
   <h1>创建</h1>
   <pre class="code"><code>
-create index &lt;index_name> on &lt;table_name> ( &lt;columns_name> )
-  tablespace &lt;tablespace_name>;</code></pre>
+create index &lt;IndexName> on &lt;TableName> ( &lt;ColumnsName> )
+  tablespace &lt;TablespaceName>;</code></pre>
 
   <h1>修改</h1>
   
   <pre class="code"><code>
 --重建表索引
-alter index &lt;index_name> rebuild;
-
---将索引移动到指定的表空间
-alter index &lt;index_name> rebuild tablespace &lt;tablespace_name>; 
-
+alter index &lt;IndexName> rebuild [tablespace &lt;TablespaceName>]; 
 --移动LOB型索引表空间
-alter table &lt;table_name> move lob(&lt;column_name>) store as (tablespace &lt;tablespace_name>); </code></pre>
-
-  <h1>查询</h1>
-  <pre class="code"><code>
-select * from user_indexes;
-select * from dba_indexes;
-select * from all_indexes;</code></pre>
+alter table &lt;TableName> move lob(&lt;ColumnName>) store as (tablespace &lt;TablespaceName>); </code></pre>
 
   <h1>删除</h1>
   <pre class="code"><code>
-drop index &lt;index_name> [force];</code></pre>
+drop index &lt;IndexName> [force];</code></pre>
 
   <h1>消除</h1>
   <pre class="code"><code>
-purge index &lt;index_name>;</code></pre>
+purge index &lt;IndexName>;</code></pre>
+
+  <h1>数据字典</h1>
+  <p>&lt;user|all|dba>_indexes</p>
 
   <h1>技巧</h1>
   
   <h2>批量生成转移语句</h2>
   <pre class="code"><code>
---批量生成索引转移语句，将某些索引转移到指定的表空间中
+--批量生成修改索引存储表空间的语句
 select 'alter index ' || t.index_name || ' rebuild tablespace &lt;tablespace_name>;' stm
   from user_indexes t
  where t.tablespace_name = &lt;user_name>
