--- a/WebContent/pages/数据库对象_角色.html
+++ b/WebContent/pages/数据库对象_角色.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>Role</title>
+<title>角色（role）</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
@@ -17,28 +17,42 @@
 <body>
   <h1>创建</h1>
   <pre class="code"><code>
-create role rolename
-  [not identified|identified by password|externally|];</code></pre>
+create role &lt;Rolename>
+  [not &lt;identified|identified> by &lt;Password>];</code></pre>
 
   <h1>修改</h1>
   <pre class="code"><code>
-alter role rolename
-  [not identified|identified by password|externally|];</code></pre>
+alter role &lt;Rolename>
+  [not &lt;identified|identified> by &lt;Password>];</code></pre>
 
   <h1>删除</h1>
   <pre class="code"><code>
-drop role rolename;</code></pre>
-
-  <h1>查询</h1>
-  <pre class="code"><code>
-select * from dba_roles; 
-select * from dba_role_privs; 
-select * from user_role_privs;</code></pre>
+drop role &lt;Password>;</code></pre>
 
   <h1>赋予</h1>
   <pre class="code"><code>
-grant role_name to user_name [with admin option];
-grant role_name to other_role_name [with admin option];</code></pre>
+grant &lt;Rolename> to &lt;Username> [with admin option];
+grant &lt;Rolename> to &lt;OtherRoleName> [with admin option];</code></pre>
+
+  <h1>数据字典</h1>
+  <table>
+    <tr>
+      <th>表名</th>
+      <th>描述</th>
+    </tr>
+    <tr>
+      <td>user_role_privs</td>
+      <td>Roles granted to current user</td>
+    </tr>
+    <tr>
+      <td>dba_role_privs</td>
+      <td>Roles granted to users and roles</td>
+    </tr>
+    <tr>
+      <td>dba_roles</td>
+      <td>All Roles which exist in the database</td>
+    </tr>
+  </table>
   
 </body>
 </html>
