--- a/WebContent/pages/参考_FAQ.html
+++ b/WebContent/pages/参考_FAQ.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>问题清单</title>
+<title>问题清单（持续更新）</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -32,8 +34,8 @@
   <p class="notice">注：tnslsnr不能大写，不然会报1053错误。</p>
   
   <h1>强制断开已连接用户</h1>
-  <pre class="code">
+  <pre class="code"><code>
 select sid,serial# from v$session where username='USERNAME';
-alter system kill session 'sid,serial';</pre>
+alter system kill session 'sid,serial'; </code></pre>
 </body>
 </html>
