--- a/WebContent/pages/参考_常用语句.html
+++ b/WebContent/pages/参考_常用语句.html
@@ -7,13 +7,59 @@
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
+<link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
 <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
 </head>
 <body>
-  <h1>磁盘相关信息查询</h1>
+
+  <h1>常用操作</h1>
+  
+  <h2>回收站</h2>
+
+  <pre class="code"><code>
+-- 查询
+select * from user_recyclebin;
+select * from recyclebin;
+select * from dba_recyclebin;
+-- 清除回收站中的表
+purge table &lt;TableName>;
+-- 清除回收站中的索引
+purge index &lt;IndexName>;
+-- 一般用户清除自己的回收站
+purge recyclebin;
+-- dba清除任何表空间中的回收站
+purge dba_recyclebin;
+-- 清除指定表空间回收站
+purge tablespace &lt;TablespaceName>;
+-- 清除指定表空间中指定用户的回收站
+purge tablespace &lt;TablespaceName> user &lt;Username>;</code></pre>
+  
+  <h2>事务</h2>
+
+  <pre class="code"><code>
+set transaction read only | read write; 
+set transaction isolation level serializable | read commited; </code></pre>
+  
+  <h1>常用查询</h1>
+  
+  <h2>参数信息</h2>
+  
+  <pre class="code"><code>
+select * from v$database;
+select * from v$instance;
+select * from v$nls_parameters;</code></pre>
+
+  <h2>常用数据字典</h2>
+  
+  <pre class="code"><code>
+select * from user_dependencies;</code></pre>
+
+  <h2>磁盘相关信息查询</h2>
+  
   <pre class="code"><code>
 select a.tablespace_name 表空间,
        c.file_name 表空间数据文件,
