--- a/WebContent/pages/数据库对象_用户.html
+++ b/WebContent/pages/数据库对象_用户.html
@@ -31,7 +31,9 @@ alter user &lt;Username>
   [default tablespace  &lt;TableSpaceName>]
   [temporary tablespace &lt;TempTableSpaceName>]
   [quota &lt;Size|unlimited> on &lt;TableSpaceName>]
-  [account &lt;lock|unlock>];</code></pre>
+  [account &lt;lock|unlock>];
+  
+alter user &lt;Username> quota unlimited on &lt;TablespaceName>;</code></pre>
   
   <h1>删除</h1>
   <pre class="code"><code>
