--- a/WebContent/pages/专题_权限.html
+++ b/WebContent/pages/专题_权限.html
@@ -3,11 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title></title>
+<title>权限</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
 <link type="text/css" rel="stylesheet" href="../css/tree.css" />
+<link type="text/css" rel="stylesheet" href="../css/highlight.css" />
 
 <script type="text/javascript" src="../js/title.js"></script>
 <script type="text/javascript" src="../js/highlight.pack.js"></script>
@@ -36,9 +37,11 @@ revoke SYSTEM_PRIVILEGE from USERNAME;</code></pre>
   <h2>对象权限</h2>
   <pre class="code"><code>
 --赋予对象权限
-grant OBJECT_PRIVILEGE on OBJECT_NAME to USERNAME [with grant option];
+grant &lt;ObjectPrivilege> on &lt;ObjectName> to &lt;Username> [with grant option];
+grant all on &lt;TableName> to &lt;Username> [with grant option];
 --撤消对象权限
-revoke OBJECT_PRIVILEGE on OBJECT_NAME from USERNAME [cascade];</code></pre>
+revoke &lt;ObjectPrivilege> on &lt;ObjectName> from &lt;Username> [cascade];
+revoke all on &lt;TableName> from &lt;UserName>;</code></pre>
 
   <h2>比较</h2>
   <p>从上面的授权语句中可以看到 [with admin option] 和 [with grant option] 两个可选项，它们使被授权的用户有能力将被授予的权限再授予其它用户。
