--- a/WebContent/pages/专题_锁.html
+++ b/WebContent/pages/专题_锁.html
@@ -21,20 +21,20 @@
     <li>DDL锁（dictionary locks，字典锁）：用于保护数据库对象的结构，如表、索引等的结构定义；</li>
     <li>内部锁和闩（internal locks and latches）：保护数据库的内部结构。</li>
   </ul>
-  <p>DML锁的目的在于保证并发情况下的数据完整性。在Oracle数据库中，DML锁主要包括TM锁和TX锁，其中TM锁称为表级锁，TX锁称为事务锁或行级锁。</p>
-  <p>当Oracle 执行DML语句时，系统自动在所要操作的表上申请TM类型的锁。当TM锁获得后，系统再自动申请TX类型的锁，并将实际锁定的数据行的锁标志位进行置位。这样在事务加锁前检查TX锁相容性时就不用再逐行检查锁标志，而只需检查TM锁模式的相容性即可，大大提高了系统的效率。TM锁包括了SS、SX、S、X 等多种模式，在数据库中用0－6来表示。不同的SQL操作产生不同类型的TM锁。</p>
+  <p>DML 锁的目的在于保证并发情况下的数据完整性。在 Oracle 数据库中，DML 锁主要包括 TM 锁和 TX 锁，其中 TM 锁称为表级锁，TX 锁称为事务锁或行级锁。</p>
+  <p>当Oracle 执行 DML 语句时，系统自动在所要操作的表上申请 TM 类型的锁。当 TM 锁获得后，系统再自动申请 TX 类型的锁，并将实际锁定的数据行的锁标志位进行置位。这样在事务加锁前检查TX锁相容性时就不用再逐行检查锁标志，而只需检查TM锁模式的相容性即可，大大提高了系统的效率。TM锁包括了SS、SX、S、X 等多种模式，在数据库中用0－6来表示。不同的SQL操作产生不同类型的TM锁。</p>
   <p>在数据行上只有X锁（排他锁）。在 Oracle数据库中，当一个事务首次发起一个DML语句时就获得一个TX锁，该锁保持到事务被提交或回滚。当两个或多个会话在表的同一条记录上执行DML语句时，第一个会话在该条记录上加锁，其他的会话处于等待状态。当第一个会话提交后，TX锁被释放，其他会话才可以加锁。</p>
   <p>当Oracle数据库发生TX锁等待时，如果不及时处理常常会引起Oracle数据库挂起，或导致死锁的发生，产生ORA-60的错误。这些现象都会对实际应用产生极大的危害，如长时间未响应，大量事务失败等。</p>
   
   <h1>悲观封锁和乐观封锁</h1>
   <h2>悲观封锁</h2>
   <p>锁在用户修改之前就发挥作用：</p>
-  <p>Select ..for update（nowait)</p>
+  <p>select ... for update (nowait)</p>
   <p>Select * from tab1 for update</p>
   <p>用户发出这条命令之后，oracle将会对返回集中的数据建立行级封锁，以防止其他用户的修改。</p>
   <p>如果此时其他用户对上面返回结果集的数据进行dml或ddl操作都会返回一个错误信息或发生阻塞。</p>
-  <p>1：对返回结果集进行update或delete操作会发生阻塞。</p>
-  <p>2：对该表进行ddl操作将会报：Ora-00054:resource busy and acquire with nowait specified。</p>
+  <p>1. 对返回结果集进行update或delete操作会发生阻塞。</p>
+  <p>2. 对该表进行ddl操作将会报：Ora-00054:resource busy and acquire with nowait specified。</p>
   <p class="bold">原因分析</p>
   <p>此时Oracle已经对返回的结果集上加了排它的行级锁，所有其他对这些数据进行的修改或删除操作都必须等待这个锁的释放，产生的外在现象就是其他的操作将发生阻塞，直到这个操作commit或rollback。</p>
   <p>同样这个查询的事务将会对该表加表级锁，不允许对该表的任何ddl操作，否则将会报出ora-00054错误：:resource busy and acquire with nowait specified。</p>
@@ -44,12 +44,11 @@
   
   <h1>阻塞</h1>
   <p>定义：当一个会话保持另一个会话正在请求的资源上的锁定时，就会发生阻塞。被阻塞的会话将一直挂起，直至持有锁的会话放弃锁定的资源为止。4个常见的DML语句会生产阻塞：</p>
-  <p>
-    INSERT<br />
-    UPDATE<br />
-    DELETE<br />
-    SELECT…FOR UPDATE
-  </p>
+  <pre>
+insert
+update
+delete
+select… for update</pre>
   <p>Insert发生阻塞的唯一情况就是用户拥有一个建有主键约束的表。当2个的会话同时试图向表中插入相同的数据时，其中的一个会话将被阻塞，直到另外一个会话提交或会滚。一个会话提交时，另一个会话将收到主键重复的错误。回滚时，被阻塞的会话将继续执行。</p>
   <p>UPDATE 和DELETE当执行Update和delete操作的数据行已经被另外的会话锁定时，将会发生阻塞，直到另一个会话提交或会滚。</p>
   <p>当一个用户发出select..for update的操作准备对返回的结果集进行修改时，如果结果集已经被另一个会话锁定，就会发生阻塞。需要等另一个会话结束之后才可继续执行。可以通过发出 select… for update nowait的语句来避免发生阻塞，如果资源已经被另一个会话锁定，则会返回以下错误：Ora-00054:resource busy and acquire with nowait specified.</p>
@@ -57,10 +56,10 @@
   <p>定义：当两个用户希望持有对方的资源时就会发生死锁。</p>
   <p>即两个用户互相等待对方释放资源时,oracle认定为产生了死锁,在这种情况下,将以牺牲一个用户作为代价,另一个用户继续执行,牺牲的用户的事务将回滚。</p>
   <p>例子：</p>
-  <p>1：用户1对A表进行Update，没有提交。</p>
-  <p>2：用户2对B表进行Update，没有提交。（此时双方不存在资源共享的问题。）</p>
-  <p>3：如果用户2此时对A表作update,则会发生阻塞，需要等到用户一的事物结束。</p>
-  <p>4：如果此时用户1又对B表作update，则产生死锁。此时Oracle会选择其中一个用户进行会滚，使另一个用户继续执行操作。</p>
+  <p>1. 用户1对A表进行Update，没有提交。</p>
+  <p>2. 用户2对B表进行Update，没有提交。（此时双方不存在资源共享的问题。）</p>
+  <p>3. 如果用户2此时对A表作update,则会发生阻塞，需要等到用户一的事物结束。</p>
+  <p>4. 如果此时用户1又对B表作update，则产生死锁。此时Oracle会选择其中一个用户进行会滚，使另一个用户继续执行操作。</p>
   <p>起因：</p>
   <p>Oracle的死锁问题实际上很少见，如果发生，基本上都是不正确的程序设计造成的，经过调整后，基本上都会避免死锁的发生。</p>
   
