--- a/WebContent/pages/参考_常用语句.html
+++ b/WebContent/pages/参考_常用语句.html
@@ -51,7 +51,8 @@ set transaction isolation level serializable | read commited; </code></pre>
   <pre class="code"><code>
 select * from v$database;
 select * from v$instance;
-select * from v$nls_parameters;</code></pre>
+select * from v$nls_parameters;
+show parameter db_name;</code></pre>
 
   <h2>常用数据字典</h2>
   
