--- a/WebContent/pages/专题_查询.html
+++ b/WebContent/pages/专题_查询.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="author" content="Eric Zong">
-<title>查询（待完善）</title>
+<title>查询</title>
 <link type="text/css" rel="stylesheet" href="../css/common.css"  />
 <link type="text/css" rel="stylesheet" href="../css/print.css" media="print" />
 <link type="text/css" rel="stylesheet" href="../css/title.css"  />
@@ -89,6 +89,21 @@ select part_id, parent_id, part_name, mp_cost from bicycle
     <li>过滤指定节点：在 where 子句中指定过滤该节点的条件</li>
     <li>过滤指定分支：在 connect by 子句中增加过滤条件</li>
   </ul>
+  
+  <h3>使用子查询实现</h3>
+  <p>以上层次查询的方法是 Oracle 支持的，我们可以使用更通用的方法来实现——子查询。</p>
+  <pre class="code"><code class="sql">
+with SubQuery
+  as (
+    select ... 
+      from &lt;TableName>
+      where parent_id = 'xxx'
+      union
+      select ...
+        from &lt;TableName> A
+        inner join SubQuery B on A.parent_id = B.id
+  )
+  select * from SubQuery; </code></pre>
 
   <h1>多表查询</h1>
   <p>连接查询的理论基础是笛卡尔积。所有连接运算的结果都是笛卡尔积的子集。</p>
